jswt-codegen/src/snapshots/jswt_codegen__test__array_literals_and_array_index_assignment.snap
---
source: jswt-codegen/src/lib.rs
expression: actual

---
Module {
    globals: [],
    types: [
        FunctionType {
            params: [],
            ret: None,
        },
    ],
    imports: [],
    functions: [
        Function {
            name: "test",
            type_idx: 0,
            instructions: [
                Local(
                    "x",
                    I32,
                ),
                Local(
                    "1",
                    I32,
                ),
                Block(
                    0,
                    [
                        LocalSet(
                            "x",
                            Complex(
                                [
                                    LocalSet(
                                        "1",
                                        Call(
                                            "arrayNew",
                                            [
                                                I32Const(
                                                    4,
                                                ),
                                            ],
                                        ),
                                    ),
                                    I32Store(
                                        Call(
                                            "arrayPush",
                                            [
                                                LocalGet(
                                                    "1",
                                                ),
                                            ],
                                        ),
                                        I32Const(
                                            1,
                                        ),
                                    ),
                                    I32Store(
                                        Call(
                                            "arrayPush",
                                            [
                                                LocalGet(
                                                    "1",
                                                ),
                                            ],
                                        ),
                                        I32Const(
                                            2,
                                        ),
                                    ),
                                    I32Store(
                                        Call(
                                            "arrayPush",
                                            [
                                                LocalGet(
                                                    "1",
                                                ),
                                            ],
                                        ),
                                        I32Const(
                                            3,
                                        ),
                                    ),
                                    I32Store(
                                        Call(
                                            "arrayPush",
                                            [
                                                LocalGet(
                                                    "1",
                                                ),
                                            ],
                                        ),
                                        I32Const(
                                            4,
                                        ),
                                    ),
                                    I32Store(
                                        Call(
                                            "arrayPush",
                                            [
                                                LocalGet(
                                                    "1",
                                                ),
                                            ],
                                        ),
                                        I32Const(
                                            5,
                                        ),
                                    ),
                                    LocalGet(
                                        "1",
                                    ),
                                ],
                            ),
                        ),
                        I32Store(
                            Call(
                                "arrayAt",
                                [
                                    LocalGet(
                                        "x",
                                    ),
                                    I32Const(
                                        0,
                                    ),
                                ],
                            ),
                            I32Const(
                                99,
                            ),
                        ),
                    ],
                ),
            ],
        },
    ],
    exports: [],
}
