jswt-codegen/src/snapshots/jswt_codegen__test__ast_with_empty_function_with_params_generates_module.snap
---
source: jswt-codegen/src/lib.rs
expression: actual

---
Module {
    globals: [],
    types: [
        FunctionType {
            params: [
                (
                    "a",
                    I32,
                ),
            ],
            ret: None,
        },
    ],
    imports: [],
    functions: [
        Function {
            name: "test",
            type_idx: 0,
            instructions: [],
        },
    ],
    exports: [],
}
