jswt-codegen/src/snapshots/jswt_codegen__test__ast_with_function_containing_return_expression_generates_module.snap
---
source: jswt-codegen/src/lib.rs
expression: actual

---
Module {
    globals: [],
    types: [
        FunctionType {
            params: [],
            ret: None,
        },
    ],
    imports: [],
    functions: [
        Function {
            name: "test",
            type_idx: 0,
            instructions: [
                Return(
                    I32Add(
                        I32Const(
                            1,
                        ),
                        I32Const(
                            2,
                        ),
                    ),
                ),
            ],
        },
    ],
    exports: [],
}
