jswt-codegen/src/snapshots/jswt_codegen__test__empty_ast_generates_empty_module.snap
---
source: jswt-codegen/src/lib.rs
expression: actual

---
Module {
    globals: [],
    types: [],
    imports: [],
    functions: [],
    exports: [],
}
